--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 											</div>
 											<div class="item col-md-4 col-sm-12 col-xs-12">
 												<h5>ADDRESS</h5>
-												<div class="value">Coimbatore, Tamilnadu</div>
+												<div class="value">Bangalore, Karanataka</div>
 											</div>
 											
 											<div class="item col-md-4 col-sm-12 col-xs-12">
